--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^11.3.8",
     "lucide-react": "^0.469.0",
     "next": "14.2.5",
+    "nodemailer": "^6.9.15",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
